@@ -1,5 +1,12 @@
 2008-11-27  Martin Leidig  <mleidig@schlund.de>
 
+	Added methods for Pustefix 0.13 forward compatibility
+
+	* src/de/schlund/pfixcore/workflow/StateImpl.java
+	* src/de/schlund/pfixcore/generator/prechecks/RegexpCheck.java
+
+2008-11-27  Martin Leidig  <mleidig@schlund.de>
+
 	Made ContextResource interface compatible to 0.13 by changing return
 	types to java.lang.Object:
 	* src/de/schlund/pfixcore/workflow/ContextResourceManagerImpl.java
